Finalizado con responsive

--- a/anuncio.html
+++ b/anuncio.html
@@ -11,69 +11,68 @@
 </head>
 
 <body>
-<header class="header-nosotros">
-    <div class="contenedor contenido-header">
-        <div class="barra">
-            <a href="index.html">
-                <img src="img/logo.svg" alt="logo">
-            </a>
+    <header class="header-nosotros">
+        <div class="contenedor contenido-header">
+            <div class="barra">
+                <a href="index.html">
+                    <img src="img/logo.svg" alt="logo">
+                </a>
+                <div class="mobile-menu">
+                    <a href="#navegacion">
+                        <img src="img/barras.svg" alt="img barras">
+                    </a>
+                </div>
+                <nav id="navegacion" class="navegación">
+                    <a href="Nosotros.html">Nosotros</a>
+                    <a href="Anuncios.html">Anuncios</a>
+                    <a href="Blog.html">Blog</a>
+                    <a href="Contacto.html">Contacto</a>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <h1 class="fw300 centrar-texto">Casa en Venta Frente al Bosque</h1>
+    <img src="img/destacada.jpg" alt="imagen anuncio">
+    <main class="contenedor seccion contenido-centrado">
+        <div class="resumen-propiedad">
+            <p class="precio">$3.000.000</p>
+            <ul class="iconos-caracteristicas">
+                <li><img src="img/icono_wc.svg" alt="icono wc">
+                    <p>3</p>
+                </li>
+                <li><img src="img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                    <p>3</p>
+                </li>
+                <li><img src="img/icono_dormitorio.svg" alt="icono dormitorio">
+                    <p>4</p>
+                </li>
+            </ul>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aperiam eaque fugit magnam nostrum pariatur quae temporibus ullam. Doloribus eos laborum mollitia necessitatibus, nisi omnis optio possimus praesentium repellat sunt. Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit. Alias aperiam eaque fugit magnam nostrum pariatur quae temporibus ullam. Doloribus eos laborum mollitia necessitatibus, nisi omnis optio possimus praesentium repellat sunt. Lorem ipsum dolor sit
+            amet, consectetur adipisicing elit. Alias aperiam eaque fugit magnam nostrum pariatur quae temporibus ullam. Doloribus eos laborum mollitia necessitatibus, nisi omnis optio possimus praesentium repellat sunt.
+        </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aperiam eaque fugit magnam nostrum pariatur quae temporibus ullam. Doloribus eos laborum mollitia necessitatibus, nisi omnis optio possimus praesentium repellat sunt. Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit. Alias aperiam eaque fugit magnam nostrum pariatur quae temporibus ullam. Doloribus eos laborum mollitia necessitatibus, nisi omnis optio possimus praesentium repellat sunt. Lorem ipsum dolor sit
+            amet, consectetur adipisicing elit. Alias aperiam eaque fugit magnam nostrum pariatur quae temporibus ullam. Doloribus eos laborum mollitia necessitatibus, nisi omnis optio possimus praesentium repellat sunt.
+        </p>
+    </main>
+
+    <footer class="site-footer sección">
+        <div class="contenedor contenedorfooter">
+
             <nav class="navegación">
+
                 <a href="Nosotros.html">Nosotros</a>
                 <a href="Anuncios.html">Anuncios</a>
                 <a href="Blog.html">Blog</a>
                 <a href="Contacto.html">Contacto</a>
+
             </nav>
+
+            <p class="copyright">Todos los Derechos Reservados &COPY; 2020</p>
         </div>
-    </div>
-</header>
-<h1 class="fw300 centrar-texto">Casa en Venta Frente al Bosque</h1>
-<img src="img/destacada.jpg" alt="imagen anuncio">
-<main class="contenedor seccion contenido-centrado">
-    <div class="resumen-propiedad">
-        <p class="precio">$3.000.000</p>
-        <ul class="iconos-caracteristicas">
-            <li><img src="img/icono_wc.svg" alt="icono wc">
-                <p>3</p>
-            </li>
-            <li><img src="img/icono_estacionamiento.svg" alt="icono estacionamiento">
-                <p>3</p>
-            </li>
-            <li><img src="img/icono_dormitorio.svg" alt="icono dormitorio">
-                <p>4</p>
-            </li>
-        </ul>
-    </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aperiam eaque fugit magnam nostrum pariatur quae
-        temporibus ullam. Doloribus eos laborum mollitia necessitatibus, nisi omnis optio possimus praesentium repellat sunt.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aperiam eaque fugit magnam nostrum pariatur quae
-        temporibus ullam. Doloribus eos laborum mollitia necessitatibus, nisi omnis optio possimus praesentium repellat sunt.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aperiam eaque fugit magnam nostrum pariatur quae
-        temporibus ullam. Doloribus eos laborum mollitia necessitatibus, nisi omnis optio possimus praesentium repellat sunt.
-    </p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aperiam eaque fugit magnam nostrum pariatur quae
-        temporibus ullam. Doloribus eos laborum mollitia necessitatibus, nisi omnis optio possimus praesentium repellat sunt.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aperiam eaque fugit magnam nostrum pariatur quae
-        temporibus ullam. Doloribus eos laborum mollitia necessitatibus, nisi omnis optio possimus praesentium repellat sunt.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aperiam eaque fugit magnam nostrum pariatur quae
-        temporibus ullam. Doloribus eos laborum mollitia necessitatibus, nisi omnis optio possimus praesentium repellat sunt.
-    </p>
-</main>
-
-<footer class="site-footer sección">
-    <div class="contenedor contenedorfooter">
-
-        <nav class="navegación">
-
-            <a href="Nosotros.html">Nosotros</a>
-            <a href="Anuncios.html">Anuncios</a>
-            <a href="Blog.html">Blog</a>
-            <a href="Contacto.html">Contacto</a>
-
-        </nav>
-
-        <p class="copyright">Todos los Derechos Reservados &COPY; 2020</p>
-    </div>
-</footer>
+    </footer>
 </body>
 
 </html>
