--- a/Blog.html
+++ b/Blog.html
@@ -11,92 +11,99 @@
 </head>
 
 <body>
-<header class="header-nosotros">
-    <div class="contenedor contenido-header">
-        <div class="barra">
-            <a href="index.html">
-                <img src="img/logo.svg" alt="logo">
-            </a>
+    <header class="header-nosotros">
+        <div class="contenedor contenido-header">
+            <div class="barra">
+                <a href="index.html">
+                    <img src="img/logo.svg" alt="logo">
+                </a>
+                <div class="mobile-menu">
+                    <a href="#navegacion">
+                        <img src="img/barras.svg" alt="img barras">
+                    </a>
+                </div>
+                <nav id="navegacion" class="navegación">
+                    <a href="Nosotros.html">Nosotros</a>
+                    <a href="Anuncios.html">Anuncios</a>
+                    <a href="Blog.html">Blog</a>
+                    <a href="Contacto.html">Contacto</a>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main class="contenedor seccion contenido-centrado">
+        <h1 class="fw300 centrar-texto">Nuestro Blog</h1>
+        <article class="entrada-blog">
+            <div class="imagen">
+
+                <img src="img/blog1.jpg" alt="blog1">
+            </div>
+            <div class="texto-entrada">
+                <a href="entrada.html">
+                    <h4>Terraza en el techo de tu casa</h4>
+                </a>
+                <p>Escrito el <span>20/10/2019</span> por: <span>Admin</span></p>
+                <p>Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero
+                </p>
+            </div>
+        </article>
+
+        <article class="entrada-blog">
+            <div class="imagen">
+                <img src="img/blog2.jpg" alt="blog2">
+            </div>
+            <div class="texto-entrada">
+                <a href="entrada.html">
+                    <h4>Construye una alberca en tu hogar</h4>
+                </a>
+                <p>Escrito el <span>20/10/2019</span> por: <span>Admin</span></p>
+                <p>Máximiza el espacio de tu hogar con esta guía y aprende a combinar colores para darle vida a tu espacio
+            </div>
+        </article>
+        <article class="entrada-blog">
+            <div class="imagen">
+
+                <img src="img/blog3.jpg" alt="blog3">
+            </div>
+            <div class="texto-entrada">
+                <a href="entrada.html">
+                    <h4>Terraza en el techo de tu casa</h4>
+                </a>
+                <p>Escrito el <span>20/10/2019</span> por: <span>Admin</span></p>
+                <p>Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero
+                </p>
+            </div>
+        </article>
+
+        <article class="entrada-blog">
+            <div class="imagen">
+                <img src="img/blog4.jpg" alt="blog4">
+            </div>
+            <div class="texto-entrada">
+                <a href="entrada.html">
+                    <h4>Guía para la decoración de tu hogar</h4>
+                </a>
+                <p>Escrito el <span>20/10/2019</span> por: <span>Admin</span></p>
+                <p>Máximiza el espacio de tu hogar con esta guía y aprende a combinar colores para darle vida a tu espacio
+            </div>
+        </article>
+    </main>
+
+    <footer class="site-footer sección">
+        <div class="contenedor contenedorfooter">
+
             <nav class="navegación">
+
                 <a href="Nosotros.html">Nosotros</a>
                 <a href="Anuncios.html">Anuncios</a>
                 <a href="Blog.html">Blog</a>
                 <a href="Contacto.html">Contacto</a>
+
             </nav>
-        </div>
-    </div>
-</header>
-<main class="contenedor seccion contenido-centrado">
-    <h1 class="fw300 centrar-texto">Nuestro Blog</h1>
-    <article class="entrada-blog">
-        <div class="imagen">
 
-            <img src="img/blog1.jpg" alt="blog1">
+            <p class="copyright">Todos los Derechos Reservados &COPY; 2020</p>
         </div>
-        <div class="texto-entrada">
-            <a href="entrada.html">
-                <h4>Terraza en el techo de tu casa</h4></a>
-            <p>Escrito el <span>20/10/2019</span> por: <span>Admin</span></p>
-            <p>Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando
-                dinero</p>
-        </div>
-    </article>
-
-    <article class="entrada-blog">
-        <div class="imagen">
-            <img src="img/blog2.jpg" alt="blog2">
-        </div>
-        <div class="texto-entrada">
-            <a href="entrada.html">
-                <h4>Construye una alberca en tu hogar</h4></a>
-            <p>Escrito el <span>20/10/2019</span> por: <span>Admin</span></p>
-            <p>Máximiza el espacio de tu hogar con esta guía y aprende a combinar colores para darle vida a tu
-                espacio
-        </div>
-    </article>
-    <article class="entrada-blog">
-        <div class="imagen">
-
-            <img src="img/blog3.jpg" alt="blog3">
-        </div>
-        <div class="texto-entrada">
-            <a href="entrada.html">
-                <h4>Terraza en el techo de tu casa</h4></a>
-            <p>Escrito el <span>20/10/2019</span> por: <span>Admin</span></p>
-            <p>Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando
-                dinero</p>
-        </div>
-    </article>
-
-    <article class="entrada-blog">
-        <div class="imagen">
-            <img src="img/blog4.jpg" alt="blog4">
-        </div>
-        <div class="texto-entrada">
-            <a href="entrada.html">
-                <h4>Guía para la decoración de tu hogar</h4></a>
-            <p>Escrito el <span>20/10/2019</span> por: <span>Admin</span></p>
-            <p>Máximiza el espacio de tu hogar con esta guía y aprende a combinar colores para darle vida a tu
-                espacio
-        </div>
-    </article>
-</main>
-
-<footer class="site-footer sección">
-    <div class="contenedor contenedorfooter">
-
-        <nav class="navegación">
-
-            <a href="Nosotros.html">Nosotros</a>
-            <a href="Anuncios.html">Anuncios</a>
-            <a href="Blog.html">Blog</a>
-            <a href="Contacto.html">Contacto</a>
-
-        </nav>
-
-        <p class="copyright">Todos los Derechos Reservados &COPY; 2020</p>
-    </div>
-</footer>
+    </footer>
 </body>
 
 </html>
