--- a/Contacto.html
+++ b/Contacto.html
@@ -11,84 +11,89 @@
 </head>
 
 <body>
-<header class="header-nosotros">
-    <div class="contenedor contenido-header">
-        <div class="barra">
-            <a href="index.html">
-                <img src="img/logo.svg" alt="logo">
-            </a>
-            <nav class="navegación">
-                <a href="Nosotros.html">Nosotros</a>
-                <a href="Anuncios.html">Anuncios</a>
-                <a href="Blog.html">Blog</a>
-                <a href="Contacto.html">Contacto</a>
-            </nav>
+    <header class="header-nosotros">
+        <div class="contenedor contenido-header">
+            <div class="barra">
+                <a href="index.html">
+                    <img src="img/logo.svg" alt="logo">
+                </a>
+                <div class="mobile-menu">
+                    <a href="#navegacion">
+                        <img src="img/barras.svg" alt="img barras">
+                    </a>
+                </div>
+                <nav id="navegacion" class="navegación">
+                    <a href="Nosotros.html">Nosotros</a>
+                    <a href="Anuncios.html">Anuncios</a>
+                    <a href="Blog.html">Blog</a>
+                    <a href="Contacto.html">Contacto</a>
+                </nav>
+            </div>
         </div>
-    </div>
-</header>
-<h1 class="fw300 centrar-texto">CONTACTO</h1>
-<img src="img/destacada3.jpg." alt="imagen principal">
-<main class="contenedor seccion contenido-centrado">
-    <h2 class="fw300 centrar-texto">Llena el Formulario de Contacto</h2>
-    <form class="contacto" action="">
-        <fieldset>
-            <legend>Información Personal</legend>
-        <label for="Nombre">Nombre </label>
-        <input type="text" id="nombre" placeholder="Tu Nombre" required>
-        <label for="Apellidos">Apellidos </label>
-        <input type="text" id="Apellidos" placeholder="Tu Apellido" required>
-        <label for="Email">E-mail</label>
-        <input type="email" id="Email" placeholder="Correo" required>
-        <label for="Teléfono">Teléfono</label>
-        <input type="tel" id="Teléfono" placeholder="Tu Teléfono"required>
-        <label for="mensaje">Mensaje:</label>
-        <textarea id="mensaje"></textarea>
-        </fieldset>
-    <fieldset>
-        <legend>Información sobre la Propiedad</legend>
-            <label for="opciones">Vende o Compra</label>
-            <select id="opciones">
+    </header>
+    <h1 class="fw300 centrar-texto">CONTACTO</h1>
+    <img src="img/destacada3.jpg" alt="imagen principal">
+    <main class="contenedor seccion contenido-centrado">
+        <h2 class="fw300 centrar-texto">Llena el Formulario de Contacto</h2>
+        <form class="contacto" action="">
+            <fieldset>
+                <legend>Información Personal</legend>
+                <label for="Nombre">Nombre </label>
+                <input type="text" id="nombre" placeholder="Tu Nombre" required>
+                <label for="Apellidos">Apellidos </label>
+                <input type="text" id="Apellidos" placeholder="Tu Apellido" required>
+                <label for="Email">E-mail</label>
+                <input type="email" id="Email" placeholder="Correo" required>
+                <label for="Teléfono">Teléfono</label>
+                <input type="tel" id="Teléfono" placeholder="Tu Teléfono" required>
+                <label for="mensaje">Mensaje:</label>
+                <textarea id="mensaje"></textarea>
+            </fieldset>
+            <fieldset>
+                <legend>Información sobre la Propiedad</legend>
+                <label for="opciones">Vende o Compra</label>
+                <select id="opciones">
                 <option value="Seleccione" disabled selected>--Seleccione--</option>
                 <option value="Compra">Compra</option>
                 <option value="Vende">Vende</option>
             </select>
-            <label for="cantidad">Cantidad</label>
-            <input type="number" id="cantidad" min="0" max="10">
-    </fieldset>
-    <fieldset>
-        <legend>Contacto</legend>
-        <p>Como desea ser Contactado: </p>
-        <div class="forma-contacto">
-        <label for="teléfono">Teléfono</label>
-        <input type="radio" name="contacto" value="teléfono" id="teléfono">
-        <label for="correo">Correo</label>
-        <input type="radio" name="contacto"  value="correo" id="correo">
+                <label for="cantidad">Cantidad</label>
+                <input type="number" id="cantidad" min="0" max="10">
+            </fieldset>
+            <fieldset>
+                <legend>Contacto</legend>
+                <p>Como desea ser Contactado: </p>
+                <div class="forma-contacto">
+                    <label for="teléfono">Teléfono</label>
+                    <input type="radio" name="contacto" value="teléfono" id="teléfono">
+                    <label for="correo">Correo</label>
+                    <input type="radio" name="contacto" value="correo" id="correo">
+                </div>
+                <p>Si eligió teléfono, elija la fecha y hora</p>
+                <label for="fecha">Fecha</label>
+                <input type="date" id="fecha">
+                <label for="Hora">Hora</label>
+                <input type="time" id="Hora" min="09:00" max="18:00">
+            </fieldset>
+            <input type="submit" value="Enviar" class="boton boton-verde">
+        </form>
+    </main>
+
+    <footer class="site-footer sección">
+        <div class="contenedor contenedorfooter">
+
+            <nav class="navegación">
+
+                <a href="Nosotros.html">Nosotros</a>
+                <a href="Anuncios.html">Anuncios</a>
+                <a href="Blog.html">Blog</a>
+                <a href="Contacto.html">Contacto</a>
+
+            </nav>
+
+            <p class="copyright">Todos los Derechos Reservados &COPY; 2020</p>
         </div>
-        <p>Si eligió teléfono, elija la fecha y hora</p>
-        <label  for="fecha">Fecha</label>
-        <input  type="date" id="fecha">
-        <label  for="Hora">Hora</label>
-        <input  type="time" id="Hora" min="09:00" max="18:00">
-    </fieldset>
-    <input type="submit" value="Enviar" class="boton boton-verde">
-    </form>
-</main>
-
-<footer class="site-footer sección">
-    <div class="contenedor contenedorfooter">
-
-        <nav class="navegación">
-
-            <a href="Nosotros.html">Nosotros</a>
-            <a href="Anuncios.html">Anuncios</a>
-            <a href="Blog.html">Blog</a>
-            <a href="Contacto.html">Contacto</a>
-
-        </nav>
-
-        <p class="copyright">Todos los Derechos Reservados &COPY; 2020</p>
-    </div>
-</footer>
+    </footer>
 </body>
 
 </html>
