--- a/Nosotros.html
+++ b/Nosotros.html
@@ -11,97 +11,92 @@
 </head>
 
 <body>
-<header class="header-nosotros">
-    <div class="contenedor contenido-header">
-        <div class="barra">
-            <a href="index.html">
-                <img src="img/logo.svg" alt="logo">
-            </a>
+    <header class="header-nosotros">
+        <div class="contenedor contenido-header">
+            <div class="barra">
+                <a href="index.html">
+                    <img src="img/logo.svg" alt="logo">
+                </a>
+                <div class="mobile-menu">
+                    <a href="#navegacion">
+                        <img src="img/barras.svg" alt="img barras">
+                    </a>
+                </div>
+                <nav id="navegacion" class="navegación">
+                    <a href="Nosotros.html">Nosotros</a>
+                    <a href="Anuncios.html">Anuncios</a>
+                    <a href="Blog.html">Blog</a>
+                    <a href="Contacto.html">Contacto</a>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <main class="contenedor">
+        <h1 class="fw300 centrar-texto">Conoce Sobre Nosotros</h1>
+        <div class="contenido-nosotros">
+            <div class="imagen">
+                <img src="img/nosotros.jpg" alt="nosotros">
+            </div>
+            <div class="texto-nosotros">
+                <blockquote class="">25 Años de Experiencia</blockquote>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aspernatur, beatae ducimus error fugiat illum, nemo neque officia omnis qui quo recusandae saepe sequi sit tempora ullam veritatis voluptas voluptatum. Lorem ipsum dolor sit
+                    amet, consectetur adipisicing elit. Ad aspernatur, beatae ducimus error fugiat illum, nemo neque officia omnis qui quo recusandae saepe sequi sit tempora ullam veritatis voluptas voluptatum.
+                </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aspernatur, beatae ducimus error fugiat illum, nemo neque officia omnis qui quo recusandae saepe sequi sit tempora ullam veritatis voluptas voluptatum. Lorem ipsum dolor sit
+                    amet, consectetur adipisicing elit. Ad aspernatur, beatae ducimus error fugiat illum, nemo neque officia omnis qui quo recusandae saepe sequi sit tempora ullam veritatis voluptas voluptatum.
+                </p>
+            </div>
+        </div>
+    </main>
+    <section class="contenedor sección">
+
+        <h2 class="centrar-texto fw300">Más Sobre Nosotros</h2>
+        <div class="iconos-nosotros">
+            <div class="icono">
+
+                <img src="img/icono1.svg" alt="iconoseguridad">
+
+                <h3>Seguridad</h3>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex tempore numquam neque, exercitationem nam dicta necessitatibus vero cum vitae pariatur, quod, facere eum sequi commodi dolor! Aliquid neque aliquam suscipit!</p>
+            </div>
+
+            <div class="icono">
+
+                <img src="img/icono2.svg" alt="iconoprecio">
+
+                <h3>El Mejor Precio</h3>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex tempore numquam neque, exercitationem nam dicta necessitatibus vero cum vitae pariatur, quod, facere eum sequi commodi dolor! Aliquid neque aliquam suscipit!</p>
+            </div>
+
+            <div class="icono">
+                <img src="img/icono3.svg" alt="iconoatiempo">
+
+                <h3>A Tiempo</h3>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex tempore numquam neque, exercitationem nam dicta necessitatibus vero cum vitae pariatur, quod, facere eum sequi commodi dolor! Aliquid neque aliquam suscipit!</p>
+            </div>
+        </div>
+
+    </section>
+
+    <footer class="site-footer sección">
+        <div class="contenedor contenedorfooter">
+
             <nav class="navegación">
+
                 <a href="Nosotros.html">Nosotros</a>
                 <a href="Anuncios.html">Anuncios</a>
                 <a href="Blog.html">Blog</a>
                 <a href="Contacto.html">Contacto</a>
+
             </nav>
+
+            <p class="copyright">Todos los Derechos Reservados &COPY; 2020</p>
         </div>
-    </div>
-</header>
-
-<main class="contenedor">
-    <h1 class="fw300 centrar-texto">Conoce Sobre Nosotros</h1>
-<div class="contenido-nosotros">
-    <div class="imagen">
-        <img src="img/nosotros.jpg" alt="nosotros">
-    </div>
-    <div class="texto-nosotros">
-        <blockquote class="">25 Años de Experiencia</blockquote>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aspernatur, beatae ducimus error fugiat illum,
-            nemo neque officia omnis qui quo recusandae saepe sequi sit tempora ullam veritatis voluptas voluptatum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aspernatur, beatae ducimus error fugiat illum,
-            nemo neque officia omnis qui quo recusandae saepe sequi sit tempora ullam veritatis voluptas voluptatum.
-        </p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aspernatur, beatae ducimus error fugiat illum,
-            nemo neque officia omnis qui quo recusandae saepe sequi sit tempora ullam veritatis voluptas voluptatum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aspernatur, beatae ducimus error fugiat illum,
-            nemo neque officia omnis qui quo recusandae saepe sequi sit tempora ullam veritatis voluptas voluptatum.
-        </p>
-    </div>
-</div>
-</main>
-<section class="contenedor sección">
-
-    <h2 class="centrar-texto fw300">Más Sobre Nosotros</h2>
-    <div class="iconos-nosotros">
-        <div class="icono">
-
-            <img src="img/icono1.svg" alt="iconoseguridad">
-
-            <h3>Seguridad</h3>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex tempore numquam neque,
-                exercitationem nam dicta necessitatibus vero cum vitae pariatur, quod, facere eum sequi
-                commodi dolor! Aliquid neque aliquam suscipit!</p>
-        </div>
-
-        <div class="icono">
-
-            <img src="img/icono2.svg" alt="iconoprecio">
-
-            <h3>El Mejor Precio</h3>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex tempore numquam neque,
-                exercitationem nam dicta necessitatibus vero cum vitae pariatur, quod, facere eum sequi
-                commodi dolor! Aliquid neque aliquam suscipit!</p>
-        </div>
-
-        <div class="icono">
-            <img src="img/icono3.svg" alt="iconoatiempo">
-
-            <h3>A Tiempo</h3>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex tempore numquam neque,
-                exercitationem nam dicta necessitatibus vero cum vitae pariatur, quod, facere eum sequi
-                commodi dolor! Aliquid neque aliquam suscipit!</p>
-        </div>
-    </div>
-
-</section>
-
-<footer class="site-footer sección">
-    <div class="contenedor contenedorfooter">
-
-        <nav class="navegación">
-
-            <a href="Nosotros.html">Nosotros</a>
-            <a href="Anuncios.html">Anuncios</a>
-            <a href="Blog.html">Blog</a>
-            <a href="Contacto.html">Contacto</a>
-
-        </nav>
-
-        <p class="copyright">Todos los Derechos Reservados &COPY; 2020</p>
-    </div>
-</footer>
+    </footer>
 </body>
 
 </html>
