--- a/entrada.html
+++ b/entrada.html
@@ -11,69 +11,63 @@
 </head>
 
 <body>
-<header class="header-nosotros">
-    <div class="contenedor contenido-header">
-        <div class="barra">
-            <a href="index.html">
-                <img src="img/logo.svg" alt="logo">
-            </a>
+    <header class="header-nosotros">
+        <div class="contenedor contenido-header">
+            <div class="barra">
+                <a href="index.html">
+                    <img src="img/logo.svg" alt="logo">
+                </a>
+                <div class="mobile-menu">
+                    <a href="#navegacion">
+                        <img src="img/barras.svg" alt="img barras">
+                    </a>
+                </div>
+                <nav id="navegacion" class="navegación">
+                    <a href="Nosotros.html">Nosotros</a>
+                    <a href="Anuncios.html">Anuncios</a>
+                    <a href="Blog.html">Blog</a>
+                    <a href="Contacto.html">Contacto</a>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <h1 class="fw300 centrar-texto">Consejos Para Tener Una Alberca En Tu Casa Sin Gastar </h1>
+    <img src="img/destacada2.jpg" alt="imagen principañ">
+    <main class="contenedor seccion contenido-centrado texto-entrada">
+
+        <article>
+
+            <p><strong>Escrito el <span>20/10/2019</span> por: <span>Admin</span></strong></p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque, exercitationem impedit in libero magni odit placeat recusandae reiciendis voluptate! Cupiditate enim harum, iusto molestias nesciunt placeat rem repudiandae voluptates?
+            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque, exercitationem impedit in libero magni odit placeat recusandae reiciendis voluptate! Cupiditate enim harum, iusto molestias nesciunt placeat rem repudiandae voluptates?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque, exercitationem impedit in libero magni odit placeat recusandae reiciendis voluptate! Cupiditate enim harum, iusto molestias nesciunt placeat rem repudiandae voluptates?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque, exercitationem impedit in libero magni odit placeat recusandae reiciendis voluptate! Cupiditate enim harum, iusto molestias nesciunt placeat rem repudiandae voluptates?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque, exercitationem impedit in libero magni odit placeat recusandae reiciendis voluptate! Cupiditate enim harum, iusto molestias nesciunt placeat rem repudiandae voluptates?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque, exercitationem impedit in libero magni odit placeat recusandae reiciendis voluptate! Cupiditate enim harum, iusto molestias nesciunt placeat rem repudiandae voluptates?
+            </p>
+        </article>
+
+
+
+    </main>
+
+    <footer class="site-footer sección">
+        <div class="contenedor contenedorfooter">
+
             <nav class="navegación">
+
                 <a href="Nosotros.html">Nosotros</a>
                 <a href="Anuncios.html">Anuncios</a>
                 <a href="Blog.html">Blog</a>
                 <a href="Contacto.html">Contacto</a>
+
             </nav>
+
+            <p class="copyright">Todos los Derechos Reservados &COPY; 2020</p>
         </div>
-    </div>
-</header>
-<h1 class="fw300 centrar-texto">Consejos Para Tener Una Alberca En Tu Casa Sin Gastar </h1>
-<img src="img/destacada2.jpg" alt="imagen principañ">
-<main class="contenedor seccion contenido-centrado texto-entrada">
-
-<article>
-
-    <p><strong>Escrito el <span>20/10/2019</span> por: <span>Admin</span></strong></p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque, exercitationem impedit in libero magni
-    odit placeat recusandae reiciendis voluptate! Cupiditate enim harum, iusto molestias nesciunt placeat rem repudiandae
-    voluptates?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque, exercitationem impedit in libero magni
-        odit placeat recusandae reiciendis voluptate! Cupiditate enim harum, iusto molestias nesciunt placeat rem repudiandae
-        voluptates?
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque, exercitationem impedit in libero magni
-        odit placeat recusandae reiciendis voluptate! Cupiditate enim harum, iusto molestias nesciunt placeat rem repudiandae
-        voluptates?
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque, exercitationem impedit in libero magni
-        odit placeat recusandae reiciendis voluptate! Cupiditate enim harum, iusto molestias nesciunt placeat rem repudiandae
-        voluptates?
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque, exercitationem impedit in libero magni
-        odit placeat recusandae reiciendis voluptate! Cupiditate enim harum, iusto molestias nesciunt placeat rem repudiandae
-        voluptates?
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque, exercitationem impedit in libero magni
-        odit placeat recusandae reiciendis voluptate! Cupiditate enim harum, iusto molestias nesciunt placeat rem repudiandae
-        voluptates?
-    </p>
-</article>
-
-
-
-</main>
-
-<footer class="site-footer sección">
-    <div class="contenedor contenedorfooter">
-
-        <nav class="navegación">
-
-            <a href="Nosotros.html">Nosotros</a>
-            <a href="Anuncios.html">Anuncios</a>
-            <a href="Blog.html">Blog</a>
-            <a href="Contacto.html">Contacto</a>
-
-        </nav>
-
-        <p class="copyright">Todos los Derechos Reservados &COPY; 2020</p>
-    </div>
-</footer>
+    </footer>
 </body>
 
 </html>
